@@ -8,6 +8,7 @@ Version 3.3.0 - SVN
  - Update M4 macro's from upstream, fixing some problems.
  - Fix configure script to allow subdir customization in FHS mode.
  - Upgrade included dash shell to version 0.5.7-2.
+ - Fix warning of runguard trying to reset resource limits to infinity.
 
 Version 3.2.0 - SVN r3594 (unreleased)
 --------------------------------------
